Fix openssl build for PPC

--- a/openssl.config
+++ b/openssl.config
@@ -174,7 +174,6 @@ crypto/pem/Makefile \
 crypto/pkcs12/Makefile \
 crypto/pkcs7/Makefile \
 crypto/pkcs7/bio_pk7.c \
-crypto/ppccap.c \
 crypto/pqueue/Makefile \
 crypto/rand/Makefile \
 crypto/rand/rand_vms.c \
@@ -320,6 +319,27 @@ SHA1_ASM \
 SHA256_ASM \
 SHA512_ASM \
 VPAES_ASM \
+"
+
+OPENSSL_CRYPTO_DEFINES_ppc="\
+AES_ASM \
+DES_RISC1 \
+DES_UNROLL \
+OPENSSL_BN_ASM_MONT \
+OPENSSL_CPUID_OBJ \
+SHA1_ASM \
+SHA256_ASM \
+"
+
+OPENSSL_CRYPTO_DEFINES_ppc64="\
+AES_ASM \
+DES_RISC1 \
+DES_UNROLL \
+OPENSSL_BN_ASM_MONT \
+OPENSSL_CPUID_OBJ \
+SHA1_ASM \
+SHA256_ASM \
+SHA512_ASM \
 "
 
 OPENSSL_CRYPTO_INCLUDES="\
@@ -965,6 +985,21 @@ crypto/bn/bn_asm.c \
 crypto/mem_clr.c \
 crypto/rc4/rc4_enc.c \
 crypto/rc4/rc4_skey.c \
+"
+
+OPENSSL_CRYPTO_SOURCES_ppc="\
+crypto/ppccap.c \
+crypto/ppccpuid.S \
+crypto/aes/asm/aes-ppc.S \
+crypto/bn/asm/bn-ppc.S \
+crypto/bn/asm/ppc-mont.S \
+crypto/bn/asm/ppc64-mont.S \
+crypto/sha/asm/sha1-ppc.S \
+crypto/sha/asm/sha256-ppc.S \
+"
+
+OPENSSL_CRYPTO_SOURCES_EXCLUDES_ppc="\
+crypto/mem_clr.c \
 "
 
 OPENSSL_SSL_INCLUDES="\
